--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,27 +1,40 @@
-<h1>Edit Your Review for:</h1>
-<h2>for <%= link_to @review.restaurant.name, restaurant_path(@review.restaurant)%></h2>
+<div class="reviews_wrapper">
+<div class="full_width_wrapper">
+<h1 class="directive" id="new_review_directive">Editing a review for <%= link_to @review.restaurant.name, restaurant_path(@review.restaurant)%>
+</h1></div>
+<h5 class="directions" id="restaurant_address">
+ <%= @review.restaurant.spaced_address %>
+</h4>
 <%= form_for @review do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title, required: true %>
-  <br>
-    <%= f.label :content %>
-    <%= f.text_area :content, required: true %>
-  <br>
-    <%= f.label :food_rating %>
-    <%= f.select :food_rating, options_for_select( (1..5).to_a, @review.food_rating), required: true%>
-  <br>
-  <%= f.label :environment_rating %>
-  <%= f.select :environment_rating, options_for_select( (1..5).to_a, @review.environment_rating), required: true%>
-  <br>
-    <%= f.label :service_rating %>
-    <%= f.select :service_rating, options_for_select( (1..5).to_a, @review.service_rating), required: true%>
-  <br>
-    <%= f.hidden_field :user_id, value: @review.user.id%>
+<div class="full_width_wrapper">
+    <%= f.text_field :title, required: true, placeholder: "Title", autocomplete: "off" %>
+</div>
+<div class="full_width_wrapper">
+    <%= f.text_area :content, required: true, placeholder: "Enter your review here" %>
+  </div>
+  <div class="full_width_wrapper">
+    <h4 class="directions">From 1-5...</h4>
+  </div>
+<div class="full_width_wrapper">
+  <div class="rating_labels_group">
+    <%= f.label :food_rating, "How was the food?", class: "rating_label" %>
+    <%= f.label :service_rating, "How was the service?", class: "rating_label" %>
+    <%= f.label :environment_rating, "How were the vibes?", class: "rating_label" %>
+  </div>
+</div>
+<div class="full_width_wrapper">
+  <div class="ratings_group">
+    <%= f.number_field :food_rating, in: 1..5, required: true, class: "rating_scale" %>
+    <%= f.number_field :service_rating, in: 1..5, required: true, class: "rating_scale" %>
+    <%= f.number_field :environment_rating, in: 1..5, required: true, class: "rating_scale" %>
+  </div>
+</div>
+
+    <%= f.hidden_field :user_id, value: @user.id%>
     <%= f.hidden_field :restaurant_id, value: @review.restaurant.id %>
-
-    <%= f.submit %><br>
+    <%= f.hidden_field :foursquare_id, value: @review.restaurant.foursquare_id %>
+    <div id="submit_post">
+      <%= f.submit "Update Review", class: 'nav_elements', id: 'post_button' %>
+    </div>
 <% end %>
-
-<%= form_tag review_path, method: "delete" do %>
-  <%= submit_tag "Delete this Review" %>
-<% end %>
+</div>
