--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -1,23 +1,8 @@
- #search_form {
-  @include outer-container;
-}
 
-#search_field {
-  @include span-columns(3);
-  @include shift(3);
-}
-
-#location_field {
-  @include span-columns(2);
-}
-
-#results_container {
-  @include outer-container;
-}
 
 #results_inner_container {
-  @include span-columns(9);
-  @include shift(3)
+  @include span-columns(11);
+  @include shift(2);
 }
 
 .result_card {
@@ -33,8 +18,15 @@
   letter-spacing: .5px;
 }
 
+.directions {
+  @include span-columns(3);
+  @include shift(5);
+  font-family: $monospace-type;
+  font-weight: bolder;
+}
+
 .result_card h4 a {
-  font-family: $serif-type;
+  font-family: $title-type;
   font-size: 1.5em;
   margin: .5em 0;
   color: #222;
@@ -47,7 +39,7 @@
 }
 
 #did_you_mean {
-  font-family: $serif-type;
+  font-family: $title-type;
   @include fill-parent();
   text-align: center;
 }
