--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,4 @@
-<h3>
-<%= link_to "Search Again", root_path%>
-</h3>
-
+<div class="reviews_wrapper">
 <h1> Welcome <%= @user.name %>! </h1>
 <%= link_to "Edit My Profile", edit_user_path(@user)%>
 
@@ -19,3 +16,4 @@
 <% end %>
 </p>
 <br><br>
+</div>
