Add analytics to footer

--- a/app/views/application/analytics.html.erb
+++ b/app/views/application/analytics.html.erb
@@ -1,6 +1,6 @@
 <h1>Trending: Restaurants</h1>
 
-<h2>Top 5 restaurants with the highest overall rating:</h2>
+<h2>Top 5 overall rated restaurants:</h2>
 <%= column_chart Restaurant.top_5_rated_restaurants, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
 
 <h2>Top 5 restaurants with the highest food rating:</h2>
@@ -15,7 +15,7 @@
 <h2>Top 5 most reviewed restaurants:</h2>
 <%= column_chart Restaurant.most_reviewed_restaurant, colors: ["rgba(255,83,77,1)"] %>
 
-<h2>Top 5 restaurants with the highest food/lowest service rating:</h2>
+<h2>Top 5 restaurants with the highest food rating / lowest service rating:</h2>
 <%= column_chart Restaurant.highest_food_lowest_service, max: 5, colors: ["rgba(255,83,77,1)"] %>
 
 <h2>Top 5 restaurants with the lowest overall rating:</h2>
