--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,11 +40,16 @@
       <div class="full_width_wrapper"></div>
 
       <div class="full_width_wrapper">
+      <div class="footer_text"><%= link_to "View analytics", analytics_path %></div>
+      </div>
+
+      <div class="full_width_wrapper">
       <div class="footer_text">Made with keystrokes and consternation at the <%= link_to "Flatiron School", "http://flatironschool.com" %>.</div>
       </div>
       <div class="full_width_wrapper">
       <div class="footer_text">Made + maintained: <%= link_to "@FrankieMFerreira", "https://github.com/FrankieMFerreira" %>, <%= link_to "@clintonn", "https://github.com/clintonn" %>, <%= link_to "@entcheva", "https://github.com/entcheva" %>, <%= link_to "@kighway", "https://github.com/kighway" %>.</div>
       </div>
+
     </footer>
   </body>
 </html>
