--- a/app/views/application/analytics.html.erb
+++ b/app/views/application/analytics.html.erb
@@ -1,33 +1,54 @@
 <h1>Trending: Restaurants</h1>
 
+<div class="analytics">
 <h2>Top 5 overall rated restaurants:</h2>
 <%= column_chart Restaurant.top_5_rated_restaurants, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
+</div>
 
+<div class="analytics">
 <h2>Top 5 restaurants with the highest food rating:</h2>
 <%= column_chart Restaurant.top_5_food_rated, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
+</div>
 
+<div class="analytics">
 <h2>Top 5 restaurants with the highest environment rating:</h2>
 <%= column_chart Restaurant.top_5_environment_rated, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
+</div>
 
+<div class="analytics">
 <h2>Top 5 restaurants with the highest service rating:</h2>
 <%= column_chart Restaurant.top_5_service_rated, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
+</div>
 
+<div class="analytics">
 <h2>Top 5 most reviewed restaurants:</h2>
 <%= column_chart Restaurant.most_reviewed_restaurant, colors: ["rgba(255,83,77,1)"] %>
+</div>
 
+<div class="analytics">
 <h2>Top 5 restaurants with the highest food rating / lowest service rating:</h2>
 <%= column_chart Restaurant.highest_food_lowest_service, max: 5, colors: ["rgba(255,83,77,1)"] %>
+</div>
 
+<div class="analytics">
 <h2>Top 5 restaurants with the lowest overall rating:</h2>
 <%= column_chart Restaurant.lowest_5_rated_restaurants, max: 5, colors: ["rgba(255,83,77,1)"] %></br>
+</div>
+
 
 <h1>Trending: Users</h1>
 
+
+<div class="analytics">
 <h2>Top 5 users who have written the most reviews:</h2>
 <%= column_chart User.top_reviewers, max: 5, colors: ["rgba(255,83,77,1)"] %>
+</div>
+
 
 <h1>Trending: Location</h1>
 
+
+<div class="analytics">
 <h2>Top 5 most popular location searches:</h2>
 <p>
   <table>
@@ -36,11 +57,13 @@
       <th>Count</th>
     </tr>
     <% Review.most_searched_zipcode.each do |obj| %>
-    <tr>
-      <td><%= obj.location %></td>
-      <td><%= obj.count %></td>
-    </tr>
+      <tr>
+        <td><%= obj.location %></td>
+        <td><%= obj.count %></td>
+      </tr>
     <% end %>
-</table>
+  </table>
+</div>
+
 
 </p>
