--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -39,7 +39,7 @@
     <%= f.hidden_field :restaurant_id, value: @restaurant.id %>
     <%= f.hidden_field :foursquare_id, value: @restaurant.foursquare_id %>
     <div class="full_width_wrapper new_review_page_button">
-      <%= f.submit "Post Review", class: 'nav_elements', id: 'post_button' %>
+      <%= f.submit "Post Review", class: 'nav_elements', id: 'submit_post' %>
     </div>
 <% end %>
 </div>
