--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -2,7 +2,7 @@
   position: relative;
   background-size: 100%;
   background-position: center;
-  margin: -.5em 0 1em -.5em;
+  margin: -.5em 0 1em -.55em;
   top: 0;
   left: 0;
   width: 100vw;
@@ -23,10 +23,12 @@ a {
   text-decoration: none;
 }
 
-// #review_list_header {
-//   font-family: $monospace-type;
-//   text-transform: uppercase;
-// }
+.review_list_header {
+  font-family: $monospace-type;
+  text-transform: uppercase;
+  text-align: center;
+
+}
 
 div.socials {
   text-align: center;
