--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -10,6 +10,33 @@
   text-align: center;
 }
 
+.user_profile_title {
+  @include fill-parent();
+  font-family: $title-type;
+  font-size: 2em;
+  text-align: center;
+}
+
+.centerer {
+  text-align: center;
+  padding: 2em;
+}
+
+.user_profile_monospace_headings {
+  @include fill-parent();
+  font-family: $monospace-type;
+  font-size: .8em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#review_header {
+  @include span-columns(3);
+  @include shift(4.5);
+  margin-bottom: 2em;
+  text-align: center;
+}
+
 #review_content {
   @include span-columns(8);
   @include shift(2);
@@ -60,7 +87,7 @@
 }
 
 #results_inner_container {
-  @include shift(0.5);
+  @include shift(2.5);
 }
 
 .rating_label {
@@ -68,11 +95,17 @@
   font-family: $monospace-type;
   font-size: .8em;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .rating_labels_group {
   margin-left: 20vw;
   @include clearfix;
+}
+
+.review_show_buttons {
+  text-align: center;
+  display: inline-block;
 }
 
 .ratings_group {
@@ -88,6 +121,36 @@
   border: 0;
   border-bottom: 1px solid lightgrey;
   padding: .5em;
+}
+
+.ratings {
+  @include span-columns(3);
+  @include shift(5);
+}
+
+.food-rating, .service-rating, .environment-rating {
+  @include fill-parent();
+  padding-top: 1em;
+  font-family: $monospace-type;
+  font-size: 1em;
+}
+
+.review-text {
+  @include fill-parent();
+  @include span-columns(7);
+  @include shift(2.5);
+  text-align: center;
+  padding: 2em;
+  line-height: 1.8em;
+  font-size: 1.1em;
+}
+
+.user_prof_edit_review {
+
+}
+
+.user_prof_edit_review:hover {
+
 }
 
 .result_card_background input {
@@ -109,7 +172,7 @@ label.result_name {
 
 .preview_result_card {
   @include span-columns(3);
-  @include omega(4n);
+  @include omega(3n);
   padding: 1.1em;
   text-align: center;
 }
@@ -136,7 +199,7 @@ label.result_name {
 
 #post_button {
   @include span-columns(2);
-  margin: 4em 0,
+  margin: 4em 1.5em,
 }
 
 #post_button:hover {
@@ -149,7 +212,7 @@ label.result_name {
   @include fill-parent();
 }
 .new_review_page_button input {
-  @include shift(4);
+  @include shift(3);
   @include span-columns(3);
 }
 
@@ -195,7 +258,9 @@ input#review_title, textarea#review_content {
 }
 
 #new_review_directive {
-  @include shift(3.4);
+  @include shift(3.0);
+  @include span-columns(6);
+  text-align: center;
 }
 
 #restaurant_address {
