--- a/app/views/reviews/preview.html.erb
+++ b/app/views/reviews/preview.html.erb
@@ -27,7 +27,7 @@
   <div class="full_width_wrapper">
   </div>
   <div id="submit_post">
-    <%= f.submit 'Publish Review', class: "nav_elements", id: "post_button" %>
+    <%= f.submit 'Publish Review', class: "nav_elements submittable", id: "post_button" %>
   </div>
 <% end %>
 </div>
