--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -202,7 +202,7 @@ label.result_name {
   margin: 4em 1.5em,
 }
 
-#post_button:hover {
+input.submittable:hover, button.submittable:hover {
   background-color: $softorange;
   color: white;
   transition: all .2s;
@@ -212,8 +212,9 @@ label.result_name {
   @include fill-parent();
 }
 .new_review_page_button input {
+  margin-top: 3em;
   @include shift(3);
-  @include span-columns(3);
+  @include span-columns(2);
 }
 
 hr.divider {
